task = atualização cadastro cliente

--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
@@ -2,5 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <body>
 	<h1>Ola! ThymeLeaf configurado</h1>
+	
+	<form method="POST">
+	
+	<label>Nome:</label>
+	<input type= "text" name="nome">
+	<br>
+	<input type="submit" value="salvar">
+	
+	</form>
 </body>
 </html>
