--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
@@ -5,8 +5,8 @@
 	
 	<form method="POST">
 	
-	<label>Nome:</label>
-	<input type= "text" name="nome">
+	<label for="nome">Nome:</label>
+	<input type="text" id="nome" name="nome">
 	<br>
 	<input type="submit" value="salvar">
 	
