--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	  xmlns:th="http://www.thymeleaf.org">
 <body>
 	<h1>Ola! ThymeLeaf configurado</h1>
 	
 	<form method="POST">
-	
+	<span th:text="${mensagem}"></span>
+	<br/>
 	<label for="nome">Nome:</label>
 	<input type="text" id="nome" name="nome">
 	<br>
