--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
@@ -1,34 +1,187 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	  xmlns:th="http://www.thymeleaf.org">
+<head>
+	<meta charset="UTF-8"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+	<title>Gerênciador Clinica</title>
+
+	<link rel="stylesheet" type="text/css" href="/gerenciador/layout/stylesheets/vendors.min.css"/>
+	<link rel="stylesheet" type="text/css" href="/gerenciador/layout/stylesheets/algaworks.min.css"/>
+	<link rel="stylesheet" type="text/css" href="/gerenciador/layout/stylesheets/application.css"/>
+
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+</head>
 <body>
-	<h1>Cadastro Clientes</h1>
-</body>
-		<div th:each="erro: ${#fields.detailedErrors('${cliente.*}')}">
-			<span th:text="${erro.message}"></span>
+<div class="aw-layout-page">
+	<nav class="navbar  navbar-fixed-top  navbar-default  js-sticky-reference" id="main-navbar">
+	  <div class="container-fluid">
+
+	    <div class="navbar-header">
+	      <a class="navbar-brand  hidden-xs" href="#">
+	        <img alt="AlgaWorks" src="/gerenciador/layout/images/logo.png"/>
+	      </a>
+
+	      <ul class="nav  navbar-nav">
+	        <li>
+	          <a href="#" class="js-sidebar-toggle"><i class="fa  fa-bars"></i></a>
+	        </li>
+	      </ul>
+	    </div>
+
+	    <ul class="nav navbar-nav  navbar-right">
+	  	      
+	    
+	                            
+	      <li class="dropdown">
+	        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+	          <i class="fa  fa-user"></i>
+	        </a>
+	        
+	        <ul class="dropdown-menu">
+	          <li>
+	            <div class="aw-logged-user">
+	              <img src="https://api.adorable.io/avatars/80/joaodascouves" 
+	                width="80" height="80" alt="João das Couves" class="aw-logged-user__picture" />
+	              <span class="aw-logged-user__name">João das Couves</span>
+	            </div>
+	          </li>
+	          <li role="separator" class="divider"></li>
+	          <li><a href="#">Meu perfil</a></li>
+	          <li><a href="#">Alterar senha</a></li>
+	          <li><a href="#">Pagamentos</a></li>
+	        </ul>
+	      </li>
+	      
+	      <li>
+	        <a href="#"><em class="fa  fa-sign-out"></em></a>
+	      </li> 
+	    </ul>
+
+	  </div>
+	</nav>
+		<aside class="aw-layout-sidebar  js-sidebar">
+		<div class="aw-layout-sidebar__content">
+
+    <nav class="aw-menu  js-menu">
+      <ul class="aw-menu__list">
+
+        <li class="aw-menu__item">
+          <a href="dashboard.html"><i class="fa  fa-fw  fa-home"></i><span>Dashboard</span></a>
+        </li>
+
+        <li class="aw-menu__item  is-active">
+          <a href="#">
+            <i class="fa  fa-fw  fa-file-text"></i><span>Cadastros</span>
+            <i class="aw-menu__navigation-icon  fa"></i>
+          </a>
+      
+          <ul class="aw-menu__list  aw-menu__list--sublist">
+            <li class="aw-menu__item  aw-menu__item--link"><a href="cadastro-produto.html">Cadastro de Cliente</a></li>
+            <li class="aw-menu__item  aw-menu__item--link  is-active"><a href="pesquisa-produtos.html">Cadastro de Funcionário</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a href="tabela-sem-dados.html">Tabela sem dados</a></li>
+          </ul>
+        </li>
+
+        <li class="aw-menu__item  is-expanded">
+          <a href="#">
+            <i class="fa  fa-fw  fa-file-text"></i><span>Páginas comuns</span>
+            <i class="aw-menu__navigation-icon  fa"></i>
+          </a>
+
+          <ul class="aw-menu__list  aw-menu__list--sublist">
+            <li class="aw-menu__item  aw-menu__item--link"><a href="pagina-vazia.html">Página vazia</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a href="login.html">Login</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a href="esqueceu-a-senha.html">Esqueceu a senha</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a href="403.html">403</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a href="404.html">404</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a href="500.html">500</a></li>
+          </ul>
+        </li>
+
+      </ul>
+    </nav>
+
 		</div>
+	</aside>
+		<section class="aw-layout-content  js-content">
+
+
+<div class="page-header">
+	<div class="container-fluid">
+		<h1>
+			Cadastro de Cliente
+		</h1>
+	</div>
+</div>
+
+<div class="container-fluid">
+
+	<div class="alert  alert-danger  alert-dismissible" role="alert">
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		<i class="fa  fa-exclamation-circle"></i> Já existe um Cliente com o nome informado.
+	</div>
+
+	<form method="get"  th:object="${cliente}" class="form-vertical  js-form-loading">
 	
-	<form method="POST" th:object="${cliente}">
-	   <span th:text="${mensagem}"></span>
-	   		   <br/>
-			<label for="nome">Nome:</label>
-		<input type="text" id="nome" th:field="*{nome}"/>
-				<br>
-			<label for="numProntuario">Número Prontuário:</label>
-		<input type="text" id="numPronturio" th:field="*{numProntuario}"/>
-				<br>
-			<label for="nunCIC">N. do RG</label>
-		<input type="text" id="nunCIC" th:field="*{nunCIC}"/>
-				<br>
-			<label for="CPF">CPF</label>
-		<input type="text" id="CPF" th:field="*{CPF}"/>
-				<br>
-			<label for="nomMae">Nome da Mãe</label>
-		<input type="text" id="nomMae" th:field="*{nomMae}"/>
-				<br>
-			<label for="nomPai">Nome Pai</label>
-		<input type="text" id="nomPai" th:field="*{nomPai}"/>
-				<br>
-		<input type="submit" value="salvar"/>
+			<div class="row">
+					<div class="col-sm-3">
+								<div class="form-group">
+									<label for="input-produto-preco">Número Prontuário</label>
+									<input id="input-produto-preco" type="text" class="form-control" placeholder=""/>
+								</div>
+							</div>
+				</div>
+			
+		<div class="form-group">
+			<label for="input-produto-nome">Nome</label>
+			<input id="input-produto-nome" type="text" class="form-control"/>
+		</div>
+
+		<div class="form-group">
+			<label for="input-produto-descricao">Descrição</label>
+			<textarea id="input-produto-descricao" rows="3" class="form-control"></textarea>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label for="input-produto-preco">Preço unitário</label>
+					<input id="input-produto-preco" type="text" class="form-control" placeholder="R$"/>
+				</div>
+			</div>
+			
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label for="input-produto-estoque">Estoque</label>
+					<input id="input-produto-estoque" type="text" class="form-control" placeholder="Unidades"/>
+				</div>
+			</div>
+		</div>
+		
+		<div class="form-group">
+			  <button class="btn  btn-primary" type="submit">Salvar</button>
+			  <a href="pesquisa-produtos.html" class="btn  btn-default">Cancelar</a>
+			
+			</div>
+		</form>
+	</div>
+</section>
+
+	<footer class="aw-layout-footer  js-content">
+		<div class="container-fluid">
+			<span class="aw-footer-disclaimer">&copy; 2016 AlgaWorks. Todos os direitos reservados.</span>
+		</div>
+	</footer>
+	<script src="/gerenciador/layout/javascripts/vendors.min.js"></script>
+	<script src="/gerenciador/layout/javascripts/algaworks.min.js"></script>
 	</form>
+	</body>
 </html>
