--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
@@ -74,7 +74,7 @@
       <ul class="aw-menu__list">
 
         <li class="aw-menu__item">
-          <a href="dashboard.html"><i class="fa  fa-fw  fa-home"></i><span>Dashboard</span></a>
+          <a href="dashboard.html"><i class="fa  fa-fw  fa-home"></i><span>Menu</span></a>
         </li>
 
         <li class="aw-menu__item  is-active">
@@ -132,19 +132,15 @@
 	<form method="get"  th:object="${cliente}" class="form-vertical  js-form-loading">
 	
 			<div class="row">
-					<div class="col-sm-3">
-								<div class="form-group">
-									<label for="input-produto-preco">Número Prontuário</label>
-									<input id="input-produto-preco" type="text" class="form-control" placeholder=""/>
-								</div>
+					<div class="col-sm-2 form-group">
+									<label for="input-cliente-prontuario">Nº. do Prontuário</label>
+									<input id="input-cliente-prontuario" type="text" class="form-control" placeholder=""/>
+							</div>
+							<div class="col-sm-10 form-group">
+							 		<label for="input-cliente-nome">Nome do Paciente</label>
+									<input id="input-cliente-nome" type="text" class="form-control"/>
 							</div>
 				</div>
-			
-		<div class="form-group">
-			<label for="input-produto-nome">Nome</label>
-			<input id="input-produto-nome" type="text" class="form-control"/>
-		</div>
-
 		<div class="form-group">
 			<label for="input-produto-descricao">Descrição</label>
 			<textarea id="input-produto-descricao" rows="3" class="form-control"></textarea>
