--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
@@ -132,15 +132,72 @@
 	<form method="get"  th:object="${cliente}" class="form-vertical  js-form-loading">
 	
 			<div class="row">
-					<div class="col-sm-2 form-group">
+							<div class="col-xs-4 col-sm-2 form-group">
 									<label for="input-cliente-prontuario">Nº. do Prontuário</label>
-									<input id="input-cliente-prontuario" type="text" class="form-control" placeholder=""/>
+									<input id="input-cliente-prontuario" type="text" class="form-control"/>
 							</div>
-							<div class="col-sm-10 form-group">
+							
+							<div class="col-xs-4 col-sm-1 form-group">
+									<label for="input-cliente-dtCadastro">Data Cadastro</label>
+									<input id="input-cliente-dtCadastro" class="form-control" placeholder="dd/mm/aaaa" data-inputmask-alias="datetime" data-inputmask-inputformat="dd/mm/yyyy" maxlength="10" autocomplete="off" type="text"/>
+							</div>
+							
+							<div class="col-xs-4  col-sm-1 form-group">
+									<label for="input-cliente-hrCadastro">Hora Cadastro</label>
+									<input id="input-cliente-hrCadastro" type="text" class="form-control"/>
+							</div>
+				</div>
+			<div class="row">
+								<div class="col-sm-12 form-group">
 							 		<label for="input-cliente-nome">Nome do Paciente</label>
 									<input id="input-cliente-nome" type="text" class="form-control"/>
 							</div>
-				</div>
+							
+								
+							<div class="col-xs-4 col-sm-1 form-group">
+							 		<label for="input-cliente-dtNasc">Data Nasc.</label>
+									<input id="input-cliente-dtNasc" type="text" class="form-control" placeholder="dd/mm/aaaa"/>
+							</div>
+							
+							<div class="col-xs-4 col-sm-1 form-group">
+							 		<label for="input-cliente-idade">Idade</label>
+									<input id="input-cliente-idade" type="text" class="form-control"/>
+							</div>
+							
+							<div class="col-sm-10 form-group">
+							 		<label for="cliente-sexo">Sexo</label>
+								<div>
+									<div class ="checkbox-inline">
+									<input type="checkbox" nome="cliente-sexo">
+									<label>Masculino</label>
+								</div>
+								<div>
+									<div class ="radio-inline">
+									<input type="checkbox" nome="cliente-sexo">
+									<label>Feminino</label>
+								</div>
+							</div>
+						</div>
+					</div>	
+					
+										
+							<div class="col-sm-10 form-group">
+							 		<label for="cliente-sexo">Sexo</label>
+								<div>
+									<div class ="radio-inline">
+									<input type="radio" nome="cliente-sexo">
+									<label>Masculino</label>
+								</div>
+								<div>
+									<div class ="radio-inline">
+									<input type="radio" nome="cliente-sexo">
+									<label>Feminino</label>
+								</div>
+							</div>
+						</div>
+					</div>	
+			</div>
+			
 		<div class="form-group">
 			<label for="input-produto-descricao">Descrição</label>
 			<textarea id="input-produto-descricao" rows="3" class="form-control"></textarea>
