task - configuração banco de dados tabela cliente endereço

--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastro-produto.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastro-produto.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-	<title>AlgaWorks</title>
+	<title>Clientes</title>
 
 	<link rel="stylesheet" type="text/css" href="/gerenciador/layout/stylesheets/vendors.min.css"/>
 	<link rel="stylesheet" type="text/css" href="/gerenciador/layout/stylesheets/algaworks.min.css"/>
@@ -154,6 +154,14 @@
 	<form method="get" class="form-vertical  js-form-loading">
 		
 		<div class="form-group">
+		
+		<div class = "row" >
+
+			<div class="col-xs-8 col-sm-2 form-group">
+					<label for="input-cliente-prontuario">Nº. do Prontuário</label>
+					<input id="input-cliente-prontuario" type="text" class="form-control" />
+			</div>
+		</div>
 			<label for="input-produto-nome">Nome</label>
 			<input id="input-produto-nome" type="text" class="form-control"/>
 		</div>
