--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
@@ -132,17 +132,17 @@
 	<form method="get"  th:object="${cliente}" class="form-vertical  js-form-loading">
 	
 			<div class="row">
-							<div class="col-xs-4 col-sm-2 form-group">
+							<div class="col-xs-12 col-sm-2 form-group">
 									<label for="input-cliente-prontuario">Nº. do Prontuário</label>
 									<input id="input-cliente-prontuario" type="text" class="form-control"/>
 							</div>
 							
-							<div class="col-xs-3 col-sm-2 form-group">
+							<div class="col-xs-4 col-sm-2 form-group">
 									<label for="input-cliente-dtCadastro">Data Cadastro</label>
 									<input id="input-cliente-dtCadastro" class="form-control" placeholder="dd/mm/aaaa" data-inputmask-alias="datetime" data-inputmask-inputformat="dd/mm/yyyy" maxlength="10" autocomplete="off" type="text"/>
 							</div>
 							
-							<div class="col-xs-3  col-sm-2 form-group">
+							<div class="col-xs-4  col-sm-2 form-group">
 									<label for="input-cliente-hrCadastro">Hora Cadastro</label>
 									<input id="input-cliente-hrCadastro" type="text" class="form-control"/>
 							</div>
@@ -163,39 +163,40 @@
 							 		<label for="input-cliente-idade">Idade</label>
 									<input id="input-cliente-idade" type="text" class="form-control"/>
 							</div>
-							
-							<div class="col-sm-10 form-group">
+								<div class="row">
+							<div class="col-xs-4 col-sm-6 form-group">
 							 		<label for="cliente-sexo">Sexo</label>
-								<div>
+							 			<div>
 									<div class ="checkbox-inline">
-									<input type="checkbox" nome="cliente-sexo">
+									<input type="checkbox">
 									<label>Masculino</label>
-								</div>
-								<div>
-									<div class ="radio-inline">
-									<input type="checkbox" nome="cliente-sexo">
+										</div>
+											<div>
+									<div class ="checkbox-inline">
+									<input type="checkbox" >
 									<label>Feminino</label>
-								</div>
+										</div>
 							</div>
 						</div>
 					</div>	
+			</div>	
+			
+							<div class="col-xs-12 col-sm-6 form-group">
+									<label for="input-cliente-nmMae">Nome da Mãe</label>
+									<input id="input-cliente-nmMae" type="text" class="form-control"/>
+							</div>
+							
+							<div class="col-xs-12 col-sm-6 form-group">
+									<label for="input-cliente-nmPai">Nome do Pai</label>
+									<input id="input-cliente-nmPai" class="form-control" type="text"/>
+							</div>
+							
+							<div class="col-xs-4  col-sm-2 form-group">
+									<label for="input-cliente-hrCadastro">Hora Cadastro</label>
+									<input id="input-cliente-hrCadastro" type="text" class="form-control"/>
+							</div>
+							
 					
-										
-							<div class="col-sm-10 form-group">
-							 		<label for="cliente-sexo">Sexo</label>
-								<div>
-									<div class ="radio-inline">
-									<input type="radio" nome="cliente-sexo">
-									<label>Masculino</label>
-								</div>
-								<div>
-									<div class ="radio-inline">
-									<input type="radio" nome="cliente-sexo">
-									<label>Feminino</label>
-								</div>
-							</div>
-						</div>
-					</div>	
 			</div>
 			
 		<div class="form-group">
