Task- atualização layout cadastro cliente.

--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
@@ -148,7 +148,7 @@
 							</div>
 				</div>
 			<div class="row">
-								<div class="col-sm-12 form-group">
+							<div class="col-sm-8 form-group">
 							 		<label for="input-cliente-nome">Nome do Paciente</label>
 									<input id="input-cliente-nome" type="text" class="form-control"/>
 							</div>
@@ -159,28 +159,10 @@
 									<input id="input-cliente-dtNasc" type="text" class="form-control" placeholder="dd/mm/aaaa"/>
 							</div>
 							
-							<div class="col-xs-4 col-sm-2 form-group">
+							<div class="col-xs-4 col-sm-1 form-group">
 							 		<label for="input-cliente-idade">Idade</label>
 									<input id="input-cliente-idade" type="text" class="form-control"/>
 							</div>
-								<div class="row">
-							<div class="col-xs-4 col-sm-6 form-group">
-							 		<label for="cliente-sexo">Sexo</label>
-							 			<div>
-									<div class ="checkbox-inline">
-									<input type="checkbox">
-									<label>Masculino</label>
-										</div>
-											<div>
-									<div class ="checkbox-inline">
-									<input type="checkbox" >
-									<label>Feminino</label>
-										</div>
-							</div>
-						</div>
-					</div>	
-			</div>	
-			
 							<div class="col-xs-12 col-sm-6 form-group">
 									<label for="input-cliente-nmMae">Nome da Mãe</label>
 									<input id="input-cliente-nmMae" type="text" class="form-control"/>
@@ -191,11 +173,14 @@
 									<input id="input-cliente-nmPai" class="form-control" type="text"/>
 							</div>
 							
-							<div class="col-xs-4  col-sm-2 form-group">
-									<label for="input-cliente-hrCadastro">Hora Cadastro</label>
+							<div class="col-xs-6  col-sm-2 form-group">
+									<label for="input-cliente-hrCadastro">CPF</label>
 									<input id="input-cliente-hrCadastro" type="text" class="form-control"/>
 							</div>
-							
+							<div class="col-xs-6  col-sm-2 form-group">
+									<label for="input-cliente-hrCadastro">RG</label>
+									<input id="input-cliente-hrCadastro" type="text" class="form-control"/>
+							</div>
 					
 			</div>
 			
