Task - Alteração Layout Cadastro Cliente

--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
@@ -166,12 +166,12 @@
 									<input id="input-cliente-nome" type="text" class="form-control"/>
 							</div>
 							
-							<div class="col-xs-4 col-sm-2 form-group">
+							<div class="col-xs-6 col-sm-2 form-group">
 							 		<label for="input-cliente-dtNasc">Data Nasc.</label>
 									<input id="input-cliente-dtNasc" type="text" class="form-control" placeholder="dd/mm/aaaa" data-inputmask-inputformat="dd/mm/yyyy"/>
 							</div>
 							
-							<div class="col-xs-4 col-sm-1 form-group">
+							<div class="col-xs-6 col-sm-1 form-group">
 							 		<label for="input-cliente-idade">Idade</label>
 									<input id="input-cliente-idade" type="text" class="form-control"/>
 							</div>
@@ -188,7 +188,7 @@
 							
 							<div class="col-xs-6  col-sm-2 form-group">
 									<label for="input-cliente-hrCadastro">CPF</label>
-									<input id="input-cliente-hrCadastro" type="text" class="form-control"/>
+									<input id="input-cliente-hrCadastro" placeholder="00000-000" data-inputmask-inputformat="00000-000" type="text" class="form-control "/>
 							</div>
 
 							<div class="col-xs-6  col-sm-2 text-left  form-group">
@@ -202,15 +202,36 @@
 									<input id="input-cliente-nmPai" class="form-control" type="text"/>
 							</div>
 							
-							<div class="col-xs-12 col-sm-4 form-group">
-									<label for="input-cliente-bairro">Bairro</label>
+							<div class="col-xs-4 col-sm-1 form-group" >
+									<label for="input-cliente-edNun">Número</label>
+									<input id="input-cliente-nmPai" class="form-control" type="text"/>
+							</div>
+												
+							<div class="col-xs-8 col-sm-5 form-group">
+									<label for="input-cliente-bairro">Complemento</label>
 									<input id="input-cliente-nmPai" class="form-control" type="text"/>
 							</div>
 							
-								<div class="col-xs-4 col-sm-1 form-group">
-									<label for="input-cliente-CEP">CEP</label>
+							<div class="col-xs-12 col-sm-6 form-group" >
+									<label for="input-cliente-edComp">Bairro</label>
 									<input id="input-cliente-nmPai" class="form-control" type="text"/>
 							</div>
+							
+							<div class="col-xs-5 col-sm-1 form-group">
+									<label for="input-cliente-CEP">CEP</label>
+									<input id="input-cliente-nmPai"  placeholder="00000-000" data-inputmask-inputformat="00000-000" class="form-control" type="text"/>
+							</div>
+																
+							<div class="col-xs-7 col-sm-3 form-group" >
+									<label for="input-cliente-edCid">Cidade</label>
+									<input id="input-cliente-nmPai" class="form-control" type="text"/>
+							</div>
+							
+							<div class="col-xs-4 col-sm-2 form-group" >
+									<label for="input-cliente-edEst">Estado</label>
+									<input id="input-cliente-nmPai" class="form-control" type="text"/>
+							</div>
+						
 					</div>
 					
 		<div class="form-group">
