--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
@@ -144,8 +144,8 @@
 
 	<form method="get"  th:object="${cliente}" class="form-vertical  js-form-loading">
 	
-			<div class="row">
-							<div class="col-xs-12 col-sm-2 form-group">
+				<div class="row">
+							<div class="col-xs-12 col-sm-2 cols-sm-offset-1 form-group">
 									<label for="input-cliente-prontuario">Nº. do Prontuário</label>
 									<input id="input-cliente-prontuario" type="text" class="form-control"/>
 							</div>
@@ -159,12 +159,15 @@
 									<label for="input-cliente-hrCadastro">Hora Cadastro</label>
 									<input id="input-cliente-hrCadastro" type="text" class="form-control"/>
 							</div>
-				</div>
+					</div>
+					
 			<div class="row">
-							<div class="col-sm-8 form-group">
-							 		<label for="input-cliente-nome">Nome do Paciente</label>
-									<input id="input-cliente-nome" type="text" class="form-control"/>
-							</div>
+							<div class="col-xs- 12 col-sm-8 inputGroupContainer">
+                              <div class="input-group">
+                              <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                              <input id="fullName" name="Nome Paciente" placeholder="Nome Paciente" class="form-control" required="true" value="" type="text">
+                              </div>
+                            </div>
 							
 							<div class="col-xs-6 col-sm-2 form-group">
 							 		<label for="input-cliente-dtNasc">Data Nasc.</label>
@@ -174,16 +177,6 @@
 							<div class="col-xs-6 col-sm-1 form-group">
 							 		<label for="input-cliente-idade">Idade</label>
 									<input id="input-cliente-idade" type="text" class="form-control"/>
-							</div>
-
-							<div class="col-xs-12 col-sm-6 form-group">
-									<label for="input-cliente-nmMae">Nome da Mãe</label>
-									<input id="input-cliente-nmMae" type="text" class="form-control"/>
-							</div>
-							
-							<div class="col-xs-12 col-sm-6 form-group">
-									<label for="input-cliente-nmPai">Nome do Pai</label>
-									<input id="input-cliente-nmPai" class="form-control" type="text"/>
 							</div>
 							
 							<div class="col-xs-6  col-sm-2 form-group">
@@ -195,8 +188,19 @@
 									<label for="input-cliente-hrCadastro">RG</label>
 									<input id="input-cliente-hrCadastro" type="text" class="form-control"/>
 							</div>
-							<div class="col-xs-6  col-sm-8 col-sm-offset-8 form-group">
-						    </div>
+							
+							<div class="col-xs-6  col-sm-8 col-sm-offset-8 form-group"></div>
+
+							<div class="col-xs-12 col-sm-6 form-group">
+									<label for="input-cliente-nmMae">Nome da Mãe</label>
+									<input id="input-cliente-nmMae" type="text" class="form-control"/>
+							</div>
+							
+							<div class="col-xs-12 col-sm-6 form-group">
+									<label for="input-cliente-nmPai">Nome do Pai</label>
+									<input id="input-cliente-nmPai" class="form-control" type="text"/>
+							</div>
+							
 							<div class="col-xs-12 col-sm-6 form-group" >
 									<label for="input-cliente-endereco">Endereço</label>
 									<input id="input-cliente-nmPai" class="form-control" type="text"/>
