Task - layout cliente atualização

--- a/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/cadastroClientes.html
@@ -201,39 +201,108 @@
 									<input id="input-cliente-nmPai" class="form-control" type="text"/>
 							</div>
 							
-							<div class="col-xs-12 col-sm-6 form-group" >
-									<label for="input-cliente-endereco">Endereço</label>
-									<input id="input-cliente-nmPai" class="form-control" type="text"/>
-							</div>
+						    <div class="col -xs-12 col-sm-6 form-group">
+							    <div class="input-group">
+							        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+							  <input name="address" placeholder="Endereço" class="form-control" type="text">
+							    </div>
+							 </div>
+							 
+							 <div class="col-xs-12 col-sm-1 form-group">
+							    <div class="input-group">
+							        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+							  		<input name="bairro" placeholder="Número" class="form-control"  type="text">
+							    </div>
+							  </div>
+							  
+							   <div class="col-xs-12 col-sm-5 form-group">
+							    <div class="input-group">
+							        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+							  		<input name="bairro" placeholder="Complemento" class="form-control"  type="text">
+							    </div>
+							  </div>
+																	
+							<div class="col-xs-12 col-sm-6 form-group">
+							    <div class="input-group">
+							        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+							  		<input name="bairro" placeholder="Bairro" class="form-control"  type="text">
+							    </div>
+							  </div>	
 							
-							<div class="col-xs-4 col-sm-1 form-group" >
-									<label for="input-cliente-edNun">Número</label>
-									<input id="input-cliente-nmPai" class="form-control" type="text"/>
+							<div class="col-xs-6 col-sm-1 form-group">
+							    <div class="input-group">
+							        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+							  		<input name="zip" placeholder="00000-000" data-inputmask-inputformat="00000-000" class="form-control"  type="text">
+							    </div>
 							</div>
-												
-							<div class="col-xs-8 col-sm-5 form-group">
-									<label for="input-cliente-bairro">Complemento</label>
-									<input id="input-cliente-nmPai" class="form-control" type="text"/>
-							</div>
-							
-							<div class="col-xs-12 col-sm-6 form-group" >
-									<label for="input-cliente-edComp">Bairro</label>
-									<input id="input-cliente-nmPai" class="form-control" type="text"/>
-							</div>
-							
-							<div class="col-xs-5 col-sm-1 form-group">
-									<label for="input-cliente-CEP">CEP</label>
-									<input id="input-cliente-nmPai"  placeholder="00000-000" data-inputmask-inputformat="00000-000" class="form-control" type="text"/>
-							</div>
-																
-							<div class="col-xs-7 col-sm-3 form-group" >
-									<label for="input-cliente-edCid">Cidade</label>
-									<input id="input-cliente-nmPai" class="form-control" type="text"/>
-							</div>
-							
+										
+							 <div class="col-xs-12 col-sm-3 form-group">
+							    <div class="input-group">
+							        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+							  		<input name="city" placeholder="Cidade" class="form-control"  type="text">
+							    </div>
+							  </div>	
+										
 							<div class="col-xs-4 col-sm-2 form-group" >
-									<label for="input-cliente-edEst">Estado</label>
-									<input id="input-cliente-nmPai" class="form-control" type="text"/>
+						    <div class="col-sm-4 selectContainer">
+							    <div class="input-group">
+							        <span class="input-group-addon"><i class="glyphicon glyphicon-list"></i></span>
+							    <select name="state" class="form-control selectpicker" >
+							      <option value=" " >Please select your state</option>
+							      <option>Alabama</option>
+							      <option>Alaska</option>
+							      <option >Arizona</option>
+							      <option >Arkansas</option>
+							      <option >California</option>
+							      <option >Colorado</option>
+							      <option >Connecticut</option>
+							      <option >Delaware</option>
+							      <option >District of Columbia</option>
+							      <option> Florida</option>
+							      <option >Georgia</option>
+							      <option >Hawaii</option>
+							      <option >daho</option>
+							      <option >Illinois</option>
+							      <option >Indiana</option>
+							      <option >Iowa</option>
+							      <option> Kansas</option>
+							      <option >Kentucky</option>
+							      <option >Louisiana</option>
+							      <option>Maine</option>
+							      <option >Maryland</option>
+							      <option> Mass</option>
+							      <option >Michigan</option>
+							      <option >Minnesota</option>
+							      <option>Mississippi</option>
+							      <option>Missouri</option>
+							      <option>Montana</option>
+							      <option>Nebraska</option>
+							      <option>Nevada</option>
+							      <option>New Hampshire</option>
+							      <option>New Jersey</option>
+							      <option>New Mexico</option>
+							      <option>New York</option>
+							      <option>North Carolina</option>
+							      <option>North Dakota</option>
+							      <option>Ohio</option>
+							      <option>Oklahoma</option>
+							      <option>Oregon</option>
+							      <option>Pennsylvania</option>
+							      <option>Rhode Island</option>
+							      <option>South Carolina</option>
+							      <option>South Dakota</option>
+							      <option>Tennessee</option>
+							      <option>Texas</option>
+							      <option> Uttah</option>
+							      <option>Vermont</option>
+							      <option>Virginia</option>
+							      <option >Washington</option>
+							      <option >West Virginia</option>
+							      <option>Wisconsin</option>
+							      <option >Wyoming</option>
+							    </select>
+							  </div>
+							</div>
 							</div>
 						
 					</div>
